updated line height collapse issue

--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -38,7 +38,7 @@ body {
 main,
 section {
     margin: 0 auto;
-    line-height: 0.3px;
+    line-height: 24px;
 }
 
 li {
